# side-pilot

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  stryker.config.json  tsconfig.json  vite.config.ts  vitest.setup.ts
.ai/agents/: artifact-acceptance-tester.md  code-reviewer.md  design-reviewer.md  instruction-evaluator.md  scope-verifier.md  test-runner.md
.ai/conventions/react-tauri/: cross-platform.md  desktop-platform-scope.md  react-performance.md  state-management.md
.ai/docs/: README.md  capabilities.md  project_specification.md
.ai/manager/: MANAGER.md
.ai/pipelines/: design-system.md  discover-feature.md  fix-bug.md  implement-cli-adapter.md  implement-design-variant.md  implement-feature.md  triage-bug.md
.ai/run/: code-reviewer-input-2.md  code-reviewer-input.md  code-reviewer-output-2.md  code-reviewer-output.md  test-runner-input-2.md  test-runner-input.md  test-runner-output-2.md  test-runner-output.md
.ai/skills/design/: SKILL.md
.ai/skills/discover-requirements/: SKILL.md
.ai/skills/documentation-maintenance/: SKILL.md
.ai/skills/implement-tauri-feature/: SKILL.md
.ai/skills/react-tauri-expert/: SKILL.md
.ai/skills/task-complete/: SKILL.md
.ai/skills/testing-pro/: SKILL.md
.beads/: config.yaml  metadata.json
.claude/agents/: artifact-acceptance-tester.md  code-reviewer.md  design-reviewer.md  instruction-evaluator.md  scope-verifier.md  test-runner.md
.claude/conventions/: testing-taxonomy.md
.claude/conventions/react-tauri/: accessibility.md  change-hygiene.md  tauri-ipc-permissions.md  tauri-windowing.md
.claude/docs/: README.md  capabilities.md  project_specification.md
.claude/manager/: MANAGER.md
.claude/pipelines/: ai-instructions-changes.md  design-system.md  discover-feature.md  fix-bug.md  implement-cli-adapter.md  implement-design-variant.md  implement-feature.md  triage-bug.md
.claude/pipelines/implement-cli-adapter/: PIPELINE.md
.claude/pipelines/implement-feature/: PIPELINE.md
.claude/skills/ai-instructions/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  code-review.md  design-book.md  e2e-gaps.md  idea.md  review_report.md  source-tree.md
docs/architecture/: README.md  db.md  ipc.md  rust.md  ui.md
e2e/: a11y.spec.ts  ai-switcher.spec.ts  bubble.spec.ts  chat-rail.spec.ts  chat-transcript.spec.ts  composer.spec.ts  drag-region.spec.ts  fixture.html  seeded.html  settings.spec.ts  smoke.spec.ts  viewport.spec.ts
side-pilot/: ContentView.swift  side_pilotApp.swift
side-pilot.xcodeproj/: project.pbxproj
src/: App.test.tsx  App.tsx  config.test.ts  contrast.test.ts  e2e-fixture.tsx  e2e-seeded-fixture.tsx  main.tsx  styles.css  styles.test.ts  theme.test.ts  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: append_message.toml  cancel_adapter_run.toml  detect_clis.toml  get_cli_integrations.toml  get_general_preferences.toml  get_provider_preferences.toml  read_history.toml  rename_session.toml  retry_route.toml  run_adapter.toml  run_route.toml  test_custom_cli.toml  update_cli_integrations.toml  update_codex_session_id.toml  update_general_preferences.toml  update_provider_preferences.toml
src-tauri/src/: cli_integrations.rs  commands.rs  lib.rs  links.rs  main.rs  preferences.rs
src-tauri/src/adapters/: ansi.rs  binary.rs  cache.rs  claude.rs  codex.rs  contract.rs  custom.rs  environment.rs  error.rs  gemini.rs  json.rs  mod.rs  process.rs  registry.rs  shared.rs
src-tauri/src/routing/: mod.rs
src-tauri/src/storage/: error.rs  mod.rs  model.rs  store.rs
src-tauri/tests/: integration_store_routing.rs
src/chat/: api.test.ts  api.ts  assistantId.test.ts  assistantId.ts  cliIntegrationsUtils.test.ts  cliIntegrationsUtils.ts  config.ts  contract.test.ts  history.test.ts  history.ts  providers.proptest.ts  providers.test.ts  providers.ts  useChat.ts  useChatStatus.test.ts  useChatStatus.ts  useSessionList.test.ts  useSessionList.ts
src/components/: AddCliDialog.test.tsx  AddCliDialog.tsx  AiSwitcher.test.tsx  AiSwitcher.tsx  Bubble.a11y.test.tsx  Bubble.test.tsx  Bubble.tsx  ChatHistory.test.tsx  ChatHistory.tsx  ChatPanel.test.tsx  ChatPanel.tsx  CliIntegrationsSettings.test.tsx  CliIntegrationsSettings.tsx  Dialog.tsx  GeneralSettings.test.tsx  GeneralSettings.tsx  ProviderIcon.tsx  RenameDialog.tsx  Settings.test.tsx  Settings.tsx  ThemesSettings.test.tsx  ThemesSettings.tsx  Toast.test.tsx  Toast.tsx
src/i18n/: en.ts  index.ts  ru.ts  translations.ts  types.ts  useI18n.test.ts  useI18n.ts
src/state/: bubbleState.test.ts  bubbleState.ts  chat.test.ts  chat.ts  drag.test.ts  drag.ts  windowResize.ts
src/styles/: custom-cli.css  history.css  shell.css  themes.css  tokens.css  transcript.css
src/test/: a11y.ts
(+74 files in other folders)
