[package]
name = "side-pilot"
version = "0.1.0"
description = "Cross-platform floating multi-AI desktop assistant"
authors = ["Alexey Platkovsky"]
edition = "2021"
rust-version = "1.77"

# The Tauri app logic lives in a library crate so it can be unit-tested with
# cargo-nextest and reused by the mobile entry point if it is ever added.
[lib]
name = "side_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# `macos-private-api` is required because the bubble window is transparent
# (see `macOSPrivateApi` in tauri.conf.json). Note: this uses private macOS
# APIs and can block Mac App Store distribution — acceptable for a sideloaded
# floating widget; revisit if App Store distribution is ever required.
[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime for the CLI routing seam (SP-008): subprocess execution,
# per-adapter timeouts, and cancellation hooks.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "time", "io-util", "macros", "sync"] }
async-trait = "0.1"
# CancellationToken backs the per-adapter cancellation hook (CLI Invocation Contract §7).
tokio-util = "0.7"
# join_all drives concurrent multi-provider dispatch for the All route (SP-016),
# so a partial failure in one provider does not cancel the others.
futures = "0.3"
libc = "0.2"
# Local SQLite store for chat sessions/messages (SP-007). `bundled` compiles
# SQLite in-tree so there is no system dependency on macOS or Windows.
rusqlite = { version = "0.32", features = ["bundled"] }
# Stable ids for sessions and persisted messages.
uuid = { version = "1", features = ["v4"] }
# Open validated external links (assistant Markdown) in the OS default browser
# instead of navigating the app's WebView.
open = "5"
# Generate TypeScript types from the Rust IPC structs so the front-end contract
# (src/chat/generated/) cannot silently drift from `adapters::contract` /
# `storage::model` (SP-065). `serde-compat` makes the export honor the same
# `#[serde(rename_all = ...)]`/`default` attributes used over the wire.
ts-rs = { version = "10", features = ["serde-compat"] }

[dev-dependencies]
# Trait-based mocking so adapter unit tests never spawn a real CLI (testing-pro: references/rust.md).
mockall = "0.13"
